<resources>
    <string name="app_name">NotingBook</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="option_menu_header">Options</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="required">Required</string>
    <string name="sort">Sort</string>
    <string name="create_new_note">Create new note</string>
    <string name="search">Search</string>
    <string name="filter_high_importancy">High importancy</string>
    <string name="filter_medium_importancy">Medium importancy</string>
    <string name="filter_low_importancy">Low importancy</string>
    <string name="filter_clear_importancy">Clear filter</string>
    <string name="select_theme">Select theme</string>
    <string name="save_theme">Save theme</string>
    <string name="settings">Settings</string>
    <string name="text_scale">Text scale</string>
</resources>
